--- a/p/pa/pas/passports.gov.au.html
+++ b/p/pa/pas/passports.gov.au.html
@@ -1,94 +1,154 @@
-<!--The following is the downloaded HTML source of the passports.gov.au privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217182146id_/http%3A//www.dfat.gov.au/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the passports.gov.au privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604024610id_/http%3A//www.dfat.gov.au/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
-   <title>DFAT Privacy Policy</title>
 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><meta http-equiv="Content-Language" content="en"><meta name="Author" content="Andj"><meta name="copyright" content="© 1999 Andj"><meta name="robots" content="noindex"><meta name="robots" content="nofollow"><link rel="stylesheet">
+<title>Privacy - The Department - Australian Department of Foreign Affairs and Trade</title>
+
+<link rel="schema.AGLS" href="http://www.naa.gov.au/recordkeeping/gov_online/agls/user_manual/1.2">
+
+<meta name="DC.Identifier" scheme="URI" content="http://www.dfat.gov.au/dept/index.html">
+
+<meta name="DC.Creator" lang="en" content="corporateName= Department of Foreign Affairs and Trade">
+
+<meta name="DC.Publisher" lang="en" content="corporateName= Department of Foreign Affairs and Trade">
+
+<meta name="DC.Rights" lang="en" content="Copyright © Commonwealth of Australia 2000">
+
+<meta name="DC.Title" lang="en" content="The Department - About us - Australian Department of Foreign Affairs and Trade">
+
+<meta name="DC.Subject" scheme="APAIS" content="international relations; international aid; trade regulations">
+
+<meta name="DC.Description" lang="en" content="This is Australian Department of Foreign Affairs and Trade about us page">
+
+<meta name="DC.Language" scheme="RFC1766" content="en">
+
+<meta name="DC.Coverage.jurisdiction" lang="en" content="Australia">
+
+<meta name="AGLS.Function" scheme="AGIFT" content="Consular Services; Diplomatic missions; International affairs; international liaison; International treaty participation; Overseas promotion; Passport services; International trade agreements; Trade development programs; information dissemination">
+
+<meta name="DC.Date.created" scheme="ISO8601" content="2000-11-22">
+
+<meta name="DC.Type.aggregationLevel" lang="en" content="Collection">
+
+<meta name="DC.Format" scheme="IMT" content="text/html">
+
+<meta name="revisit-after" content="2 Days">
+
+<meta name="Robot" content="ALL">
+
+<meta name="rating" content="General">
+
+<link href="dept/layout_dept.css" rel="styleSheet" type="text/css">
+
 </head>
-<body bgcolor="#FFFFFF">
-<p><table border="0" cellspacing="0" cellpadding="10" width="100%">
-   <tbody><tr bgcolor="#990000">
-      <td valign="top" colspan="4">
-         <p><font face="Arial, Geneva, sans-serif" color="#FFFFFF"><b>THE
-         AUSTRALIAN DEPARTMENT OF FOREIGN AFFAIRS AND
-         TRADE</b></font></p>
-      </td>
-   </tr>
+
+
+
+<body link="#000080" vlink="#336699" alink="#c0c0c0">
+
+       
+ 
+
+ 
+
+
+
+
+    <table border="0" cellspacing="0" cellpadding="0" width="100%">
+  <tbody><tr>
+    <td colspan="2" bgcolor="#D5E3EC" height="18">
+      <p align="center">
+        <a href="http://www.dfat.gov.au/index.html" class="menu">Home</a> | 
+        <a href="http://www.dfat.gov.au/travel/index.html" class="menu">Travel</a> |
+	<a href="http://www.dfat.gov.au/geo/index.html" class="menu">Countries</a> | 
+	<a href="http://www.dfat.gov.au/globalissues/index.html" class="menu">Global Issues</a> |
+	<a href="http://www.dfat.gov.au/minister/index.html" class="menu">Ministers</a> | 
+        <a href="http://www.dfat.gov.au/media/releases/index.html" class="menu">Media Releases</a> |
+	<a href="http://www.dfat.gov.au/media/speeches/index.html" class="menu">Speeches</a> |
+	<a href="http://www.dfat.gov.au/dept/index.html" class="menu">The Department</a> |
+	<a href="http://www.dfat.gov.au/publications/index.html" class="menu">Publications</a>&nbsp; |
+	<a href="http://www.dfat.gov.au/search" class="menu">Search</a> |
+	<a href="http://www.dfat.gov.au/directory.html" class="menu">Index</a></p></td>
+  </tr>
+  <tr>
+    <td bgcolor="#6699CC" width="130">
+      <img src="http://www.dfat.gov.au/graphics/coat_of_arms.gif" alt="Australian coat of arms" align="bottom"></td>
+    <td bgcolor="#336699" width="100%" valign="top">
+       <img src="http://www.dfat.gov.au/graphics/page_head.gif" alt="Australian Department of Foreign Affairs and Trade" align="bottom"></td>
+  </tr>
 </tbody></table>
-</p><p><font face="Arial"><b>PRIVACY </b></font></p>
 
-<p>Pages on the webserver www.dfat.gov.au and its sub-domains conform to the following 
-privacy guidelines:</p>
 
-<p>We collect clickstream data in our HTTP logs. These logs are used
-internally to better develop the site and allow us to report on site
-activity. They are not used for any other purpose. When you visit
-this web site, we make a record of your visit and log the following
-information for statistical purposes:</p>
+<!-- Generic-Unknown-nocss --> 
+<!-- ia_archiver --> 
 
-<blockquote>- the user's server address,
-   
-   <p>-the user's top level domain name (for example .com, .gov, .au,
-   .uk etc),</p>
-   
-   <p>-the date and time of visit to the site,</p>
-   
-   <p>-the pages accessed and documents downloaded,</p>
-   
-   <p>-the type of browser used.</p></blockquote>
 
-<p>No attempt will be made to identify users or their browsing
-activities except, in the unlikely event of an investigation, where a
-law enforcement agency may exercise a warrant to inspect the Internet
-Service Provider's logs.</p>
-
-<p>If you use forms on the site to purchase publications, the information you 
-  provide is e-mailed to our publications section. It is not retained on the public 
-  web server.</p>
-<p>The passport renewal form (https://www.passports.gov.au/passport_renewal.html) 
-  is secured using 40 or 128 bit certificates depending, on your browser.</p>
-
-<p>We will only record your e-mail address if you send us a message. It will only 
-  be used for the purpose for which it was provided and will not be added to a 
-  mailing list unless that is the purpose of the message. We will not use your 
-  e-mail address for any other purpose, and will not disclose it without your 
-  consent. We do not redistribute any of this information outside of the Department.</p>
-<p><b>Cookies</b></p>
-<p> A cookie is a small file that is sent to your web browser from a web server 
-  and stored on your computer's hard drive. Cookies are used on two of our sub-sites: 
-  http://www.publications.dfat.gov.au and http://www.tradewatch.dfat.gov.au. A 
-  cookie is set when you enter the site or purchase from us online. The cookies 
-  are only valid during the session.</p>
-
-<p>The staff who operate this site are subject to the <a href="http://www.austlii.edu.au/au/legis/cth/consol_act/pa1988108/"><em>Commonwealth 
-  Privacy Act 1988</em></a>.</p>
-<p>&nbsp;</p>
-<p><i>Updated September 2001</i></p>
-
-<p>
-
-</p><hr>
-<center>&nbsp;
+<div class="mainbody"> 
+  <h1>Privacy</h1>
+  <p>Pages on the webserver www.dfat.gov.au, www.passports.gov.au, www.foreignminister.gov.au, 
+    www.trademinister.gov.au, www.asis.gov.au, and www.embassy.gov.au and their 
+    sub-domains conform to the following privacy guidelines:</p>
+  <p>We collect clickstream data in our HTTP logs. These logs are used internally 
+    to better develop the site and allow us to report on site activity. They are 
+    not used for any other purpose. When you visit this web site, we make a record 
+    of your visit and log the following information for statistical purposes:</p>
+  <ul>
+    <li>the user's server address, </li>
+    <li> the user's top level domain name (for example .com, .gov, .au, .uk etc), 
+    </li>
+    <li> the date and time of visit to the site, </li>
+    <li> the pages accessed and documents downloaded, </li>
+    <li> the type of browser used. </li>
+  </ul>
+  <p>No attempt will be made to identify users or their browsing activities except, 
+    in the unlikely event of an investigation, where a law enforcement agency 
+    may exercise a warrant to inspect the Internet Service Provider's logs.</p>
+  <p>If you use forms on the site to purchase publications, the information you 
+    provide is e-mailed to our publicationsdespatch section. Your information 
+    is not retained on the public web server and will not be used for other purposes.</p>
+  <p>The passport renewal form (https://www.passports.gov.au/passport_renewal.html) 
+    is secured using 40 or 128 bit certificates depending, on your browser.</p>
+  <p>We will only record your e-mail address if you send us a message. It will 
+    only be used for the purpose for which it was provided and will not be added 
+    to a mailing list unless that is the purpose of the message. We will not use 
+    your e-mail address for any other purpose, and will not disclose it without 
+    your consent. We do not redistribute any of this information outside of the 
+    Department.</p>
+  <h4>Cookies</h4>
+  <p> A cookie is a small file that is sent to your web browser from a web server 
+    and stored on your computer's hard drive. Cookies are used on three of our 
+    sub-sites: http://www.publications.dfat.gov.au, https://www.gradrec.dfat.gov.au 
+    and http://www.tradewatch.dfat.gov.au. A cookie is set when you enter the 
+    site or purchase from us online. The cookies are only valid during the session.</p>
+  <p>The staff who operate this site are subject to the <a href="http://www.austlii.edu.au/au/legis/cth/consol_act/pa1988108/"><em>Commonwealth 
+    Privacy Act 1988</em></a>.</p>
+  <p>&nbsp;</p>
+  <p><i>Updated April 2002</i></p>
+  <h1>&nbsp;</h1>
+  <hr align="LEFT" noshade="" size="1">
+  
   <p align="center">
       <a href="/index.html">Home</a>
     | <a href="http://www.dfat.gov.au/search">Search</a>
-    | <a href="/directory.html">Site Index</a>
+    | <a href="http://www.dfat.gov.au/directory.html">Site Index</a>
   </p>
 
   <p align="center">
-      © <a href="/copyright.html">Commonwealth of Australia 2001</a> 
-    | <a href="/disclaim.html">Disclaimer</a> 
-    | <a href="/privacy.html">Privacy</a>
+      © <a href="http://www.dfat.gov.au/copyright.html">Commonwealth of Australia 2002</a> 
+    | <a href="http://www.dfat.gov.au/disclaim.html">Disclaimer</a> 
+    | <a href="http://www.dfat.gov.au/privacy.html">Privacy</a>
   </p>
 
 
+</div>
 
-<p>&nbsp;</p>
 
-</center>
 
-<p></p>
+
+
+
+
 
 
 </body></html>
