--- a/h/ho/hop/hopto.org.html
+++ b/h/ho/hop/hopto.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hopto.org privacy policy that was archived on 2001-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011212081705id_/http%3A//www.no-ip.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hopto.org privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604025215id_/http%3A//www.no-ip.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title></title>
@@ -28,12 +28,16 @@ document.login.username.focus();}
 
 
 
+
 </head>
 
 <body background="/images/bg2.gif" text="black" bgcolor="#FFFFFF" onload="placeFocus();">
 
 <table align="center" width="95%" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td background="">
-<table width="100%" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td align="left"><a href="/"><img border="0" alt="Free Dynamic DNS Services and URL Redirection" src="/images/new_logo.gif"></a></td><td valign="bottom" align="right"><img width="275" height="24" src="/images/ditchyourip.gif"></td></tr></tbody></table>
+<table width="100%" cellspacing="0" cellpadding="0" border="0">
+
+
+<tbody><tr><td align="left"><a href="/"><img border="0" alt="Free Dynamic DNS Services and URL Redirection" src="/images/new_logo.gif"></a></td><td valign="bottom" align="right"><br><img width="275" height="24" src="/images/ditchyourip.gif"></td></tr></tbody></table>
 <table width="100%" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td width="12" height="13" align="left"><img alt="DNS Dynamic" width="12" height="13" src="/images/ul.gif"></td>
 	<td width="100%">
 	<table width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -65,8 +69,8 @@ Password:<br>&nbsp;&nbsp;<small><input style="background-color: eeeeee; color=bl
 			<img src="/images/1pix.gif" width="140" height="10"><br>
 			<table bgcolor="black" width="100%" border="0" cellspacing="0" cellpadding="2"><tbody><tr><td class="title-bar"><font size="2" face="arial" color="white"><nobr>&nbsp;Featured Tip</nobr></font></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="5">
 
-<tbody><tr><td><a class="sidenavlink" href="/tips.php/id/3">Using No-IP with a Cable/DSL router.</a><br>
-<font size="-2" color="white">by Dan Durrer<br><br></font></td></tr>
+<tbody><tr><td><a class="sidenavlink" href="/tips.php/id/2">So your ISP has decided to block port 80? </a><br>
+<font size="-2" color="white">by Joel Rasmus<br><br></font></td></tr>
 </tbody></table>
 &nbsp;&nbsp;<a href="/tips.php"><b><font color="white" size="2" face="arial">More Tips</font></b></a>			<img src="/images/1pix.gif" width="140" height="10"><br>
 			
@@ -81,12 +85,16 @@ Password:<br>&nbsp;&nbsp;<small><input style="background-color: eeeeee; color=bl
 <font size="2" face="arial">
 <input type="hidden" name="search" value="submit"><input style="background-color: 003366; color=white;  font-size=xx-small;" type="text" name="host" size="15" maxlength="22">
 <b> .</b> <select style="background-color: 003366; color=white;  font-size=xx-small; " name="sdomain"><option value="3utilities.com">3utilities.com</option>
+<option value="bounceme.net">bounceme.net</option>
+<option value="hopto.org">hopto.org</option>
+<option value="myftp.biz">myftp.biz</option>
 <option value="myftp.org">myftp.org</option>
 <option value="myvnc.com">myvnc.com</option>
 <option value="no-ip.biz">no-ip.biz</option>
 <option value="no-ip.com">no-ip.com</option>
 <option value="no-ip.info">no-ip.info</option>
 <option value="no-ip.org">no-ip.org</option>
+<option value="redirectme.net">redirectme.net</option>
 <option value="servebeer.com">servebeer.com</option>
 <option value="servecounterstrike.com">servecounterstrike.com</option>
 <option value="serveftp.com" selected="">serveftp.com</option>
@@ -97,6 +105,7 @@ Password:<br>&nbsp;&nbsp;<small><input style="background-color: eeeeee; color=bl
 <option value="servepics.com">servepics.com</option>
 <option value="servequake.com">servequake.com</option>
 <option value="sytes.net">sytes.net</option>
+<option value="zapto.org">zapto.org</option>
 </select>&nbsp;<input type="image" name="search" src="/images/search.gif" alt="Search" border="0" align="absmiddle"><br>
 <!--end host search shit-->
 </font></font></form></td></tr></tbody></table>
@@ -178,7 +187,7 @@ info@no-ip.com<br>
 	
 	<td rowspan="3" bgcolor="003366" valign="top" width="150">
 			<!--right nav begin-->
-			<table bgcolor="black" width="100%" border="0" cellspacing="0" cellpadding="2"><tbody><tr><td class="title-bar"><font size="2" face="arial" color="white"><nobr>&nbsp;Services</nobr></font></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/services/page/free/dynamic/dns">No-IP Free</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/services/page/plus/dynamic/dns">No-IP Plus</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/services/page/squared/secondary/dns">No-IP Squared</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/services/mail/all/sid/">No-IP Mail <img border="0" src="/images/new_blink.gif"></a></td></tr></tbody></table><br><table bgcolor="black" width="100%" border="0" cellspacing="0" cellpadding="2"><tbody><tr><td class="title-bar"><font size="2" face="arial" color="white"><nobr>&nbsp;Help Desk</nobr></font></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/dyndns-howto.php">Dynamic DNS Howto</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/faq.php">FAQ</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/geekterms.php">GeekTerms</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/contact.php">Contact No-IP</a></td></tr></tbody></table><br><table bgcolor="black" width="100%" border="0" cellspacing="0" cellpadding="2"><tbody><tr><td class="title-bar"><font size="2" face="arial" color="white"><nobr>&nbsp;Resource Center</nobr></font></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/links.php">Links</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/news.php">News Updates</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/recommend.php">Recommend No-IP</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/referral.php">Referral Program</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/status.php">System Status</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/gear.php">T-Shirts</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/whois/">Whois Search</a></td></tr></tbody></table>			<img src="/images/1pix.gif" width="140" height="10"><br>
+			<table bgcolor="black" width="100%" border="0" cellspacing="0" cellpadding="2"><tbody><tr><td class="title-bar"><font size="2" face="arial" color="white"><nobr>&nbsp;Services</nobr></font></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/services/page/free/dynamic/dns">No-IP Free</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/services/page/plus/dynamic/dns">No-IP Plus</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/services/page/squared/secondary/dns">No-IP Squared</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/services/mail/all/sid/">No-IP Mail</a></td></tr></tbody></table><br><table bgcolor="black" width="100%" border="0" cellspacing="0" cellpadding="2"><tbody><tr><td class="title-bar"><font size="2" face="arial" color="white"><nobr>&nbsp;Help Desk</nobr></font></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/dyndns-howto.php">Dynamic DNS Howto</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/faq.php">FAQ</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/geekterms.php">GeekTerms</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/contact.php">Contact No-IP</a></td></tr></tbody></table><br><table bgcolor="black" width="100%" border="0" cellspacing="0" cellpadding="2"><tbody><tr><td class="title-bar"><font size="2" face="arial" color="white"><nobr>&nbsp;Resource Center</nobr></font></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/links.php">Links</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/news.php">News Updates</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/recommend.php">Recommend No-IP</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/referral.php">Referral Program</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/status.php">System Status</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/gear.php">T-Shirts</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/whois/">Whois Search</a></td></tr></tbody></table>			<img src="/images/1pix.gif" width="140" height="10"><br>
 						<img src="/images/1pix.gif" width="140" height="10"><br>
 			<table bgcolor="black" width="100%" border="0" cellspacing="0" cellpadding="2"><tbody><tr><td class="title-bar"><font size="2" face="arial" color="white"><nobr>&nbsp;Dyn-Update Client</nobr></font></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/downloads.php">Windows</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/downloads.php">Mac OS</a></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="1"><tbody><tr><td>&nbsp;<img align="textmiddle" src="/images/nav_dot.gif" width="5" height="5"></td><td><a class="sidenavlink" href="/downloads.php">Linux</a></td></tr></tbody></table>			<img src="/images/1pix.gif" width="140" height="10"><br>
 						
@@ -210,9 +219,9 @@ info@no-ip.com<br>
 
 
 <div align="center">
-<small><font face="Arial" color="black">Copyright © 1999-2001 No-IP.com. All rights reserved. Please read our <font color="red"><a href="/tos.php"><font color="red">Terms of Service</font></a></font> and <a href="/privacy.php"><font color="red">Privacy Policy</font></a>.</font></small><font face="Arial" color="black"><br><a href="http://www.vitalwerks.com"><img src="/images/little_vitalnet.gif" width="125" height="25" border="0" alt="vitalwerks" align="TOP"></a>&nbsp;&nbsp;<a href="/referral.php"><img border="0" src="/images/poweredby.gif" alt="Dynamic DNS for your domain"></a>&nbsp;&nbsp;<a href="http://www.cisco.com" target="_blank"><img border="0" src="/images/cisco.gif" alt="Network Powered by Cisco"></a></font></div><font face="Arial" color="black">
+<small><font face="Arial" color="black">Copyright © 1999-2002 Vitalwerks LLC. All rights reserved. Please read our <font color="red"><a href="/tos.php"><font color="red">Terms of Service</font></a></font> and <a href="/privacy.php"><font color="red">Privacy Policy</font></a>.</font></small><font face="Arial" color="black"><br><a href="http://www.vitalwerks.com"><img src="/images/little_vitalnet.gif" width="125" height="25" border="0" alt="vitalwerks" align="TOP"></a>&nbsp;&nbsp;<a href="/referral.php">
+</a></font></div><font face="Arial" color="black"><a href="/referral.php">
 
 
 
-
-</font></body></html>
+</a></font></body></html>
